change in travis yml

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-static3==0.5.1
-Twisted==15.0.0
-urllib3==1.10.2
-w3lib==1.11.0
-zope.interface==4.1.2
-pip install -e git://github.com/leonardoo/django-dropbox.git#egg=django_dropbox
+Django==1.4.1
+distribute==0.6.27
+dj-database-url==0.2.1
+psycopg2==2.4.5
+wsgiref==0.1.2
