--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: android
-sudo: required
+sudo: true
 jdk: oraclejdk8
 android:
     components:
         - tools
         - platform-tools
-        - build-tools-26.0.2
+        - build-tools-26.1.1
         - android-26
         - android-22
         - android-24
@@ -14,37 +14,42 @@ android:
         - extra-android-m2repository
         - addon-google_apis-google-26
         - sys-img-armeabi-v7a-android-22
+        - sys-img-armeabi-v7a-android-26
         - sys-img-armeabi-v7a-android-24
+        - extra
+    licenses:
+        - 'android-sdk-preview-license-52d11cd2'
+        - 'android-sdk-license-.+'
+        - 'google-gdk-license-.+'
+
+python: 2.7
+# install dependencies
 before_install:
     - sudo apt-get update
-    - sudo apt-get install -y make build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev
-      libsqlite3-dev wget curl llvm libncurses5-dev libncursesw5-dev xz-utils tk-dev
-    - git clone https://github.com/pyenv/pyenv.git ~/.pyenv
-    - echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.bash_profile
-    - echo 'export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.bash_profile
-    - echo 'eval "$(pyenv init -)"' >> ~/.bash_profile
-    - git clone https://github.com/yyuu/pyenv-virtualenv.git ~/.pyenv/plugins/pyenv-virtualenv
-    - echo 'eval "$(pyenv virtualenv-init -)"' >> ~/.bash_profile
-    - source ~/.bash_profile
-    - pyenv install 3.6.1
-    - pyenv virtualenv 3.6.1 undang
-    - pyenv activate undang
-    - curl -sL https://deb.nodesource.com/setup_9.x | sudo -E bash -
-    - pip install --upgrade pip
-    - sudo apt-get install nodejs
-    - sudo apt-get install build-essential
+    - sudo apt-get install -y make build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm libncurses5-dev libncursesw5-dev xz-utils tk-dev
+    - nvm install 8.11.4
+    - node --version
+    # Require node global packages
+    - npm install -g appium-doctor
+    - npm install -g appium
+    - npm install -g wd
+    # Get the virtualenv in place
+    - pip install --user virtualenv
+    - virtualenv venv
+    - source venv/bin/activate
+    - pip install selenium pytest toolz python_client urllib3
+    # Required appium-doctor necessities
     - PATH=$PATH:$JAVA_HOME/bin
-    - npm install appium
-    - npm install appium-doctor
-    - "./node_modules/.bin/appium-doctor"
-    - "./node_modules/.bin/appium --log-level info > appium_log.txt &"
 before_script:
+# Create and start emulator
+    - appium &
     - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
-    - emulator -avd test -no-skin -no-window &
+    - emulator -avd test -no-window -no-audio &
     - android-wait-for-emulator
+    - emulator -list-avds
     - adb shell input keyevent 82 &
 script:
-    - "./gradlew assemble"
-    - pytest
+    - appium-doctor
+    - . venv/bin/activate && pytest MovieAppTest.py && deactivate
 after_script:
     - cat ./appium_log.txt
